--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,8 +1,11 @@
-/* 반응형 대비 최소제한 너비 설정 */
+body, html {
+    scroll-behavior: smooth;
+}
 
 /* header */
 header, main {
     background-color: #0B2832;
+    /* 반응형 대비 최소제한 너비 설정 */
     min-width:900px; /* 최소너비 */
 }
 header {
@@ -71,14 +74,18 @@ main #skill .container li .contents {
 /* profile */
 main #profile {
     background-color: #f1f1f1;
+
+
 }
 main #profile h1 {text-align: center;}
 main #profile h1 img {}
 main #profile .container {
     /* background-color: pink; */
-    margin-top: 60px;
+    padding-top: 60px;
     display: flex; flex-flow: row nowrap;
     justify-content: center;
+    width:963px; height: 686px;
+    margin: 0 auto;
 }
 main #profile .container p {
     margin-right: 50px;
@@ -119,30 +126,30 @@ main #project_web1 {
     background-color: #f1f1f1;
 }
 main #project_web1 h1 {text-align: center; font-size: 2.5rem; font-weight: 600; color:#0B2832;}
-main #project_web1 .link {text-align: center;
-    margin-top: 40px;
-    
-
+main #project_web1 .con {
+    padding-top: 20px;
+    width: 925px;
+    margin: 0 auto;
 }
-main #project_web1 .link a:hover {background-color: #C0D9BF; color:#0B2832;}
-main #project_web1 .link a {
+main #project_web1 .con .link {/* text-align: center; */
+    margin-top: 40px;
+}
+main #project_web1 .con .link a:hover {background-color: #C0D9BF; color:#0B2832;}
+main #project_web1 .con .link a {
     color:#fff;
     font-size: 1.5rem; padding:10px 20px;
     background-color: #0B2832;
     border-radius: 10px;
     margin-right: 20px;
 }
-main #project_web1 .link a:last-child {margin-right: 0;}
-main #project_web1 .project_info {
+main #project_web1 .con .link a:last-child {margin-right: 0;}
+main #project_web1 .con .project_info {
     margin-top: 40px;
-    height: 200px; position: relative; background-color: pink;
 }
-main #project_web1 .project_info p {
+main #project_web1 .con .project_info p {
     line-height: 40px; font-size: 1.25rem;
-    position: absolute; top:0;
 }
 main #project_web1 .preview {
-    /* margin-top: 200px; */
     text-align: center;
 }
 main #project_web1 .preview img {}
